--- a/style.css
+++ b/style.css
@@ -1,123 +1,147 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+:root {
+  font-size: 62.5%;
+}
+
 body {
-    margin: 0;
-  
-    font-family: "Open Sans", sans-serif;
-  
-    background: linear-gradient(90deg, rgb(227, 255, 248, 0) 82.08%, rgb(227, 255, 248, 0.38) 100%);
-  
-    min-height: 100vh;
-  }
-  
-  .page {
-    width: 1000px;
-    margin: 0 auto;
-    padding-top: 65px;
+  font-size: 1.6rem;
+  font-family: "open sans", sans-serif;
+  background: #3d759b;
+  min-height: 100vh;
+}
 
-  }
+.page {
+  width: 100rem;
+  margin: 0 auto;
+  padding: 2rem 3rem 0 ;
+}
 
-  main{
+main {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 58px;
+}
+
+ul {
+  display: flex;
+  list-style: none;
+  gap: 48px;
+  margin: 0;
+  padding: 0;
+}
+
+a {
+  color: #1f1534;
+  text-decoration: none;
+}
+
+a::before {
+  display: block;
+  content: attr(title);
+  font-weight: bold;
+  overflow: hidden;
+  visibility: hidden;
+}
+
+ul li a:hover {
+  font-weight: bold;
+}
+
+h1 ul {
+  font-family: "Mulish", sans-serif;
+}
+
+h1 {
+  font-size: 4.9rem;
+  line-height: 5.6rem;
+  color: #1f1534;
+
+  font-weight: normal;
+  width: 49rem;
+}
+
+h1 span {
+  color: #89c5cc;
+  font-weight: bold;
+}
+
+section p {
+  font-size: 1.6rem;
+  line-height: 2.8rem;
+  color: #1f1534;
+
+  margin: 4rem auto;
+}
+
+button {
+  color: white;
+  font-family: "open sans", sans-serif;
+  font-size: 1.6rem;
+  line-height: 2.1rem;
+
+  background: #69b99d;
+  border: none;
+  padding: 1.4rem 3.2rem 1.5rem;
+
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 1rem;
+  border-radius: 2rem;
+  cursor: pointer;
+}
+
+button:hover {
+  background: #66c4a3;
+}
+
+footer {
+  font-size: 1.4rem;
+  line-height: 2.8rem;
+  text-align: center;
+
+  margin-top: 3rem;
+}
+
+footer a {
+  font-weight: bold;
+}
+
+#balls {
+  position: fixed;
+  bottom: 0;
+  right: 0;
+}
+
+@media (max-width:600px) {
+  main {
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: space-between;
+  }
 
-  }
-  
-  nav {
-    display: flex;
-    justify-content:space-between;
-    align-items: center;
-    margin-bottom: 58px;
-  }
-  
-  ul {
-    display: flex;
-    list-style: none;
-    gap: 48px;
-    margin: 0;
-    padding: 0;
-  }
-  
-  a {
-    color: #1f1534;
-    text-decoration: none;
-  }
-  
-  ul li a {
-      opacity: 0.5;
-  }
-  
-  ul li a:hover {
-    font-weight: bold;
-    opacity: 1;
-  }
-  
-  h1 ul {
-    font-family: "Mulish", sans-serif;
-  }
-  
-  h1 {
-    font-size: 49px;
-    line-height: 56px;
-    color: #1f1534;
-  
-    font-weight: normal;
-  
-    width: 490px;
-  }
-  
-  h1 span {
-    color: #89c5cc;
-    font-weight: bold;
-  }
-  
-  section p {
-    font-size: 14px;
-    line-height: 28px;
-    color: #7d7987;
-  
-    margin: 40px auto;
-  }
-  
-  button {
-    color: white;
-    font-family: "Open Sans", sans-serif;
-    font-size: 16px;
-    line-height: 21px;
-  
-    background: #69B99D;
-    border: 0;
-    padding: 14px 32px 15px;
-  
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    gap: 10px;
-  
-    border-radius: 4px;
-  
-    cursor: pointer;
-  }
-  
-  button:hover {
-      background: #4EA788;
-  }
-  
-  footer {
-    font-size: 14px;
-    line-height: 28px;
-  
+  section h1, p, button {
+    width: 70rem ;
+    place-content: center;
     text-align: center;
-  
-    margin-top: 80px;
-  }
-  
-  footer a {
-    font-weight: bold;
-  }
-  
-  #balls {
-    position: fixed;
-    bottom: 0;
-    right: 0;
-  }
-  
+  }    
+}
+
+
+
+
+
+
